// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceContext should have a brand name for default 1`] = `
<DocumentFragment>
  <span>
    Default Brand Name
  </span>
</DocumentFragment>
`;

exports[`ServiceContext should have a brand name for news 1`] = `
<DocumentFragment>
  <span>
    BBC News
  </span>
</DocumentFragment>
`;

exports[`ServiceContext should have a brand name for persian 1`] = `
<DocumentFragment>
  <span>
    BBC News فارسی
  </span>
</DocumentFragment>
`;
